Add @NotNull and @NonNull annotations. Add DEFAULT instances to JavaConstructor and JavaGettersAndSetters

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>ink.reactor</groupId>
     <artifactId>fission</artifactId>
-    <version>1.0.5</version>
+    <version>1.0.6</version>
     <packaging>jar</packaging>
 
     <name>Fission</name>
@@ -40,6 +40,11 @@
             <artifactId>lombok</artifactId>
             <version>1.18.36</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>26.0.2</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
